Axios Interceptors initialized ,products apis bugs fixed and logout button added on navbar(on mobile screen)

--- a/web/src/Components/Navbar/Navbar.css
+++ b/web/src/Components/Navbar/Navbar.css
@@ -61,8 +61,8 @@
         overflow: hidden;
     }
 }
-@media (max-width:500px) {
+/* @media (max-width:500px) {
     .salesBtn{
         display: none
     }
-}
+} */
